--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -1,1 +1,44 @@
-h1 { color: black; }
+:root {
+  --dark-1: #00020a;
+  --dark-2: #2f2f2f;
+  --light-1: #f7f7ff;
+  --yellow-1: #ffca22;
+  --red-1: #c3423f;
+}
+
+html {
+  font-size: 24px;
+}
+
+body {
+  background-color: var(--dark-1);
+  color: var(--light-1);
+}
+
+h1 {
+  font-size: 3rem;
+}
+h2 {
+  font-size: 2.5rem;
+}
+h3 {
+  font-size: 1.5rem;
+}
+
+div.header {
+  background: var(--dark-2);
+  margin-bottom: 1rem;
+  height: 4rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 1rem;
+}
+
+div.header div.nav {
+  display: flex;
+}
+
+div.header div.nav a {
+  margin: 0 0.5rem;
+}
