--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -51,11 +51,11 @@ div.header div.nav a {
 /*** CARDS ***/
 
 div.card {
-  width: 13rem;
-  height: 13rem;
+  width: 20rem;
+  height: 20rem;
   border: 3px solid var(--light-1);
   border-radius: 5px;
-  padding: 0.5rem;
+  padding: 1rem;
 
   display: flex;
   flex-direction: column;
@@ -63,7 +63,7 @@ div.card {
   align-items: center;
 }
 
-div.card p.text {
+div.card h3.text {
   text-align: center;
 }
 
@@ -77,7 +77,6 @@ div.tag {
   border: 3px solid var(--light-1);
   border-radius: 500px;
   padding: 0.2rem 0.4rem;
-  font-size: 20px;
   margin: 0.2rem 0.2rem;
 }
 
