--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -53,6 +53,7 @@ div.header div.nav a {
 div.card {
   width: 20rem;
   height: 20rem;
+  background: var(--dark-1);
   border: 3px solid var(--light-1);
   border-radius: 5px;
   padding: 1rem;
@@ -97,6 +98,7 @@ div.ctas {
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-bottom: 5rem;
 }
 
 div.ctas div.platforms {
@@ -133,4 +135,52 @@ div.ctas a.waitlist {
   text-decoration: none;
   background: var(--yellow-1);
   color: var(--dark-1);
+}
+
+div.features {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: relative;
+}
+
+div.feature {
+  background: var(--dark-2);
+  width: 40rem;
+  height: 25rem;
+  display: flex;
+  align-items: center;
+  position: relative;
+  margin: 2rem 0;
+}
+
+div.feature div.card {
+  position: relative;
+}
+
+div.feature.l {
+  left: -10%;
+}
+
+div.feature.l div.card {
+  left: -3rem;
+}
+
+div.feature.r {
+  right: -10%;
+  padding-left: 3rem;
+}
+
+div.feature.r div.card {
+  right: -3rem;
+}
+
+div.feature div.text {
+  height: 70%;
+  flex-grow: 1;
+}
+
+div.feature div.text h2 {
+  margin-bottom: 2rem;
 }
