--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -14,6 +14,12 @@ html {
 body {
   background-color: var(--dark-1);
   color: var(--light-1);
+
+  /* FIXME: temporary, for MVP without 'features' or 'roadmapbe' */
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  height: 100vh;
 }
 
 h1 {
@@ -54,7 +60,7 @@ div.card {
   width: 20rem;
   height: 20rem;
   background: var(--dark-1);
-  border: 3px solid var(--light-1);
+  border: 4px solid var(--light-1);
   border-radius: 5px;
   padding: 1rem;
 
@@ -87,7 +93,8 @@ div.banner {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 4rem 0;
+  /* margin: 4rem 0; */
+  margin-bottom: 4rem;
 }
 
 div.banner h1 {
