--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -9,6 +9,11 @@
 html {
   font-size: 24px;
   font-family: 'Electrolize', sans-serif;
+
+  /* might need to remove later! :P */
+  -webkit-user-select: none; /* Safari */
+  -ms-user-select: none; /* IE 10 and IE 11 */
+  user-select: none; /* Standard syntax */
 }
 
 body {
